--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,6 @@ name = "simple_ssr"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 yew = { git = "https://github.com/yewstack/yew/" }
 reqwest = { version = "0.11.8", features = ["json"] }
@@ -18,12 +16,14 @@ wasm-logger = "0.2"
 log = "0.4"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+axum = "0.5"
 tokio = { version = "1.15.0", features = ["full"] }
-warp = "0.3"
 num_cpus = "1.13"
 tokio-util = { version = "0.7", features = ["rt"] }
 once_cell = "1.5"
 clap = { version = "3.1.7", features = ["derive"] }
+tower = { version = "0.4", features = ["make"] }
+tower-http = { version = "0.3", features = ["fs", "cors", "add-extension"] }
 
 [features]
 hydration = ["yew/hydration"]
